--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Android School</string>
     <string name="hello_eltex">Hello, Eltex!</string>
+    <string name="avatar">avatar</string>
+    <string name="menu">menu</string>
 </resources>
