--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_eltex">Привет, Eltex!</string>
     <string name="avatar">аватар</string>
     <string name="menu">меню</string>
+    <string name="not_implemented">Не реализовано</string>
 </resources>
