--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,4 +5,7 @@
     <string name="avatar">аватар</string>
     <string name="menu">меню</string>
     <string name="not_implemented">Не реализовано</string>
+    <string name="like">like</string>
+    <string name="share">поделиться</string>
+    <string name="participate">учавствовать</string>
 </resources>
