text sharing  from our application to others added

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,5 @@
     <string name="like">like</string>
     <string name="share">поделиться</string>
     <string name="participate">учавствовать</string>
+    <string name="share_text">Автор: %s, контент: %s</string>
 </resources>
