remove event added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="content">Content</string>
     <string name="new_event_description">New event</string>
     <string name="event_empty_error">Content must not be blank</string>
+    <string name="delete_event">Delete event</string>
 </resources>
