getting all posts, likes, participation implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="posts_description">Posts</string>
     <string name="users_description">Users</string>
     <string name="new_event_label">New event</string>
+    <string name="network_error">Network error</string>
+    <string name="unknown_error">Unknown error\n</string>
+    <string name="retry">Retry</string>
 </resources>
