--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="network_error">Network error</string>
     <string name="unknown_error">Unknown error\n</string>
     <string name="retry">Retry</string>
+    <string name="edit_event_toolbar">Edit event</string>
 </resources>
